# iot-solar-dehydrator

./: README.md
esp8266/: .gitignore  Makefile  README.md  sdkconfig
stm32/: Cargo.toml  README.md  build.rs  memory.x  openocd.gdb  rust-toolchain.toml
stm32/.cargo/: config.toml
stm32/src/: animation.rs  at24c08.rs  main.rs  main_menu.rs  menu.rs  rotary_encoder.rs  sht31.rs  ssd1315.rs
stm32/src/animation/: logo_animation.rs
stm32/src/at24c08/: registered_addresses.rs
stm32/src/menu/: fan_menu.rs  main_menu.rs  sensor_menu.rs
