[package]
name = "stm32"
version = "0.1.0"
edition = "2024"

[[bin]]
name ="stm32"
test = false

[dependencies]
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-stm32 = { version = "0.6.0", features = ["stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "exti", "defmt"] ,
}
embassy-time = { version = "0.5.1", features = ["defmt", "tick-hz-32_768"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embedded-graphics = { version = "0.8.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
heapless = { version = "0.9.3", features = ["defmt"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
